Added VWAP based strategy

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -8,8 +8,9 @@ cron-market-time = 0/5 * 9-15 ? * MON-FRI *
 timezone = GMT-4
 task-queue-filepath = task.queue
 selenium-driver-filepath = C:\\chromedriver.exe
-initial-multiplier = 3
+initial-multiplier = 2
 multiplier-step = 1
+expected-success-rate = 0.8
 etoro-login = mariusungu89
-etoro-pass = bullshit11
+etoro-password = bullshit11
 transaction-amount = 200
