--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -3,14 +3,15 @@ api = http://api.nasdaq.com/api/quote/
 api-params = /realtime-trades?&limit=
 api-limit = 10
 db-filepath = prices.
-transaction-cooldown = 1
-cron-market-time = 0/5 * 9-15 ? * MON-FRI *
+transaction-cooldown = 3
+cron-market-time = 0/5 * 10-14 ? * MON-FRI *
 timezone = GMT-4
 task-queue-filepath = task.queue
 selenium-driver-filepath = C:\\chromedriver.exe
-initial-multiplier = 2
+initial-multiplier = 4
+max-multiplier = 10
 multiplier-step = 1
-expected-success-rate = 0.8
+expected-success-rate = 0.9
 etoro-login = mariusungu89
 etoro-password = bullshit11
-transaction-amount = 200
+transaction-amount = 1000
