Corrected the trend algorithm

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,17 +1,14 @@
-symbols = AAPL,AMZN,TSLA,FB,NVDA,BABA
+symbols = AAPL,AMZN,GOOG,MSFT
 api = http://api.nasdaq.com/api/quote/
 api-params = /realtime-trades?&limit=
-api-limit = 10
+api-limit = 100
 db-filepath = prices.
 transaction-cooldown = 3
-cron-market-time = 0/5 * 10-14 ? * MON-FRI *
+cron-market-time = 0/5 * 10-15 ? * MON-FRI *
 timezone = GMT-4
 task-queue-filepath = task.queue
 selenium-driver-filepath = C:\\chromedriver.exe
-initial-multiplier = 4
-max-multiplier = 10
-multiplier-step = 1
-expected-success-rate = 0.9
+sequence-multiplier = 4
 etoro-login = mariusungu89
 etoro-password = bullshit11
-transaction-amount = 1000
+money-amount = 1000
