Corrected the VWAP algorithm

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,14 +1,15 @@
-symbols = AAPL,AMZN,GOOG,MSFT
+symbols = AAPL,MSFT,AMZN
 api = http://api.nasdaq.com/api/quote/
 api-params = /realtime-trades?&limit=
-api-limit = 100
-db-filepath = prices.
-transaction-cooldown = 3
-cron-market-time = 0/5 * 10-15 ? * MON-FRI *
+api-limit = 45
+db-filepath = vwap.
+trade-cooldown = 0
+cron-market-time = 0/5 * 10-14 ? * MON-FRI *
 timezone = GMT-4
 task-queue-filepath = task.queue
 selenium-driver-filepath = C:\\chromedriver.exe
-sequence-multiplier = 4
+sequence-multiplier = 2
+vwap-precision = 10000
 etoro-login = mariusungu89
 etoro-password = bullshit11
 money-amount = 1000
